--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,3 +88,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+.myBrand {
+  display: flex; gap: 5px; align-items: center; border: 1px solid red;
+}
